gary fixed gap at bottom of manage group page

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_group.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_group.scss
@@ -77,8 +77,12 @@
     margin-bottom: 0px;
 }
 
+#group-padding {
+    padding-bottom: 0;
+}
 .group-margin {
     margin-top: 20px;
+    padding-bottom: 0;
 }
 
 .group-calender-container {
